<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/tv_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18.667dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/explore"
        android:textColor="#0D1436"
        android:textSize="29sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_sort"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/ic_sortmenu"
        app:layout_constraintBottom_toBottomOf="@+id/tv_explore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_explore" />

    <EditText
        android:id="@+id/edt_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_line_bottom_item"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="9.333dp"
        android:hint="@string/find_the_document"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="#9C9C9C"
        app:layout_constraintTop_toBottomOf="@id/tv_explore" />

    <TextView
        android:id="@+id/tv_no_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/no_item"
        android:textSize="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/iv_clear_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/outline_close_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/edt_search"
        app:layout_constraintEnd_toEndOf="@id/edt_search"
        app:layout_constraintTop_toTopOf="@id/edt_search" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_search" />
</androidx.constraintlayout.widget.ConstraintLayout>