<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LanguageActivity">
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_marginEnd="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="16dp"/>
        <TextView
            android:textColor="#0D1436"
            android:fontFamily="@font/roboto_medium"
            android:textSize="19sp"
            android:text="@string/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@drawable/bg_line_bottom_item"
            android:paddingBottom="13dp"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:width="320dp"
                android:id="@+id/tv_eng"
                android:textColor="#0D1436"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:text="@string/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/iv_eng"
                android:layout_gravity="center"
                android:src="@drawable/ic_ticksort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_line_bottom_item"
            android:paddingBottom="13dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:width="320dp"
                android:id="@+id/tv_vie"
                android:textColor="#0D1436"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:text="@string/ti_ng_vi_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:visibility="invisible"
                android:id="@+id/iv_vi"
                android:layout_gravity="center"
                android:src="@drawable/ic_ticksort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_line_bottom_item"
            android:paddingBottom="13dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:width="320dp"
                android:id="@+id/tv_ja"
                android:textColor="#0D1436"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:text="Japanese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:visibility="invisible"
                android:id="@+id/iv_ja"
                android:layout_gravity="center"
                android:src="@drawable/ic_ticksort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_line_bottom_item"
            android:paddingBottom="13dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:width="320dp"
                android:id="@+id/tv_fr"
                android:textColor="#0D1436"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:text="French"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:visibility="invisible"
                android:id="@+id/iv_fr"
                android:layout_gravity="center"
                android:src="@drawable/ic_ticksort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_line_bottom_item"
            android:paddingBottom="13dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:width="320dp"
                android:id="@+id/tv_hi"
                android:textColor="#0D1436"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:text="Hindi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:visibility="invisible"
                android:id="@+id/iv_hi"
                android:layout_gravity="center"
                android:src="@drawable/ic_ticksort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_line_bottom_item"
            android:paddingBottom="13dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:width="320dp"
                android:id="@+id/tv_du"
                android:textColor="#0D1436"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:text="Dutch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:visibility="invisible"
                android:id="@+id/iv_du"
                android:layout_gravity="center"
                android:src="@drawable/ic_ticksort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_line_bottom_item"
            android:paddingBottom="13dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:width="320dp"
                android:id="@+id/tv_po"
                android:textColor="#0D1436"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:text="Portuquese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:visibility="invisible"
                android:id="@+id/iv_po"
                android:layout_gravity="center"
                android:src="@drawable/ic_ticksort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_line_bottom_item"
            android:paddingBottom="13dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:width="320dp"
                android:id="@+id/tv_sp"
                android:textColor="#0D1436"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:text="Spanish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:visibility="invisible"
                android:id="@+id/iv_sp"
                android:layout_gravity="center"
                android:src="@drawable/ic_ticksort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_line_bottom_item"
            android:paddingBottom="13dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:width="320dp"
                android:id="@+id/tv_in"
                android:textColor="#0D1436"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:text="Indonesian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:visibility="invisible"
                android:id="@+id/iv_in"
                android:layout_gravity="center"
                android:src="@drawable/ic_ticksort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>